--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -7,25 +7,28 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link type="text/css" href="/static/css/demo.css" rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>My Bicycle Shop</title>
+    <title>Borealis Boardshop</title>
 </head>
 <body>
 
 <div class="container">
-    <h1>Shop</h1>
+    <h1>Borealis Boardshop Inventory Management System</h1>
     <hr>
-    <h2>Parts</h2>
-    <form th:action="@{/mainscreen}">
-        Filter: <input type="text" name="partkeyword" id="partkeyword" size="50" th:value="${partkeyword}" required />
-        &nbsp;
-        <input type="submit" value="Search" />
-        &nbsp;
-        <input type="button" value="Clear" id="btnClearPart" onclick="clearSearch()" />
-    </form>
+    <div class="form-container">
+        <h2>Parts</h2>
+        <form th:action="@{/mainscreen}">
+            Filter: <input type="text" name="partkeyword" class="input-field" id="partkeyword" size="50" th:value="${partkeyword}" required />
+            &nbsp;
+            <input type="submit" class="button" value="Search" />
+            &nbsp;
+            <input type="button" value="Clear" class="button" id="btnClearPart" onclick="clearSearch()" />
+        </form>
+    </div>
     <br><br>
     <a th:href="@{/showFormAddInPart}" class="btn btn-primary btn-sm mb-3">Add Inhouse Part</a>
     <a th:href="@{/showFormAddOutPart}" class="btn btn-primary btn-sm mb-3">Add Outsourced Part</a>
@@ -50,14 +53,17 @@
         </tr>
         </tbody>
     </table>
-    <h2>Products</h2>
-    <form th:action="@{/mainscreen}">
-        Filter: <input type="text" name="productkeyword" id="productkeyword" size="50" th:value="${productkeyword}" required />
-        &nbsp;
-        <input type="submit" value="Search" />
-        &nbsp;
-        <input type="button" value="Clear" id="btnClearProduct" onclick="clearSearch()" />
-    </form>
+    <div class="form-container">
+        <h2>Products</h2>
+        <form th:action="@{/mainscreen}">
+            Filter: <input type="text" name="productkeyword" class="input-field" id="productkeyword" size="50" th:value="${productkeyword}" required />
+            &nbsp;
+            <input type="submit" class="button" value="Search" />
+            &nbsp;
+            <input type="button" class="button" value="Clear" id="btnClearProduct" onclick="clearSearch()" />
+        </form>
+    </div>
+
     <script type="text/javascript">
         function clearSearch() {
             window.location = "[[@{/}]]";
