--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -18,6 +18,7 @@
 
 <div class="container">
     <h1>Borealis Boardshop Inventory Management System</h1>
+    <a href="about.html"><button class="btn btn-lg centered-button">About</button></a>
     <hr>
     <div class="form-container">
         <h2>Parts</h2>
