--- a/src/main/resources/templates/failedpurchase.html
+++ b/src/main/resources/templates/failedpurchase.html
@@ -7,13 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>About Borealis Boardshop</title>
+    <title>Purchase Failed</title>
 </head>
 <body>
-<div class="container about-container">
-    <h1>About Borealis Boardshop</h1>
-    <p>We've been Anchorage's premier skateboard sales and repair destination since 1998. Whether you've been skating your whole life or you're just learning, we've got you covered. Located in the heart of Spenard, we're thrilled to offer parts, service, and ready-to-go boards to our community.</p>
+<div class="container">
+    <h1>Purchase failed.</h1>
+    <h2>You cannot purchase an item that's not in stock.</h2>
+    <p>You will be returned to the home page automatically.</p>
     <a th:href="@{mainscreen}"><button class="btn btn-lg centered-button">Home</button></a>
 </div>
+<script>
+    setTimeout(function() {
+        window.location.href = '/mainscreen';
+    }, 5000)
+</script>
 </body>
 </html>
