--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -4,9 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Part Form</title>
-
-<!--    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />-->
+    <title>Product Form</title>
 </head>
 <body>
 <h1>Product Detail</h1>
