--- a/src/main/resources/templates/OutsourcedPartForm.html
+++ b/src/main/resources/templates/OutsourcedPartForm.html
@@ -2,38 +2,60 @@
 <html lang="en">
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link type="text/css" href="/css/demo.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Part Form</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
-<h1>Outsourced Part Detail</h1>
+<div class="container">
+    <div class="form-container container-md">
+        <h1>Outsourced Part Detail</h1>
+        <form action="#" th:action="@{/showFormAddOutPart}" th:object="${outsourcedpart}" method="POST" class="form-inline">
 
-<form action="#" th:action="@{/showFormAddOutPart}" th:object="${outsourcedpart}" method="POST"}>
+            <!-- Add hidden form field to handle update -->
+            <input type="hidden" th:field="*{id}"/>
 
-<!-- Add hidden form field to handle update -->
-    <p><input type="hidden" th:field="*{id}"/></p>
+            <div>
+                <span>Part name: </span>
+                <input type="text" th:field="*{name}" placeholder="Name" class="input-override"/>
+            </div>
+            <div>
+                <span>Price: </span>
+                <input type="text" th:field="*{price}" placeholder= "Price" class="input-override"/>
+                <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
+            </div>
+            <div>
+                <span>Quantity: </span>
+                <input type="text" th:field="*{inv}" placeholder="Inventory" class="input-override"/>
+                <p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
+            </div>
+            <div>
+                <span>Minimum Inventory: </span>
+                <input type="text" path="minInv" th:field="*{minInv}" placeholder="Minimum Inventory" class="input-override">
+                <p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>
+            </div>
+            <div>
+                <span>Maximum Inventory: </span>
+                <input type="text" path="maxInv" th:field="*{maxInv}" placeholder="Maximum Inventory" class="input-override">
+                <p th:if="${#fields.hasErrors('maxInv')}" th:errors="*{maxInv}">Maximum Inventory Error</p>
+            </div>
+            <div>
+                <span>Part ID: </span>
+                <input type="text" th:field="*{companyName}" placeholder="Company Name" class="input-override"/>
+            </div>
 
-<p><input type="text" th:field="*{name}" placeholder="Name" class="form-control mb-4 col-4"/></p>
-
-<p><input type="text" th:field="*{price}" placeholder= "Price" class="form-control mb-4 col-4"/></p>
-    <p th:if="${#fields.hasErrors('price')}" th:errors="*{price}">Price Error</p>
-
-<p><input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
-<p th:if="${#fields.hasErrors('inv')}" th:errors="*{inv}">Inventory Error</p>
-
-<p><input type="text" path="minInv" th:field="*{minInv}" placeholder="Minimum Inventory" class="form-control mb-4 col-4"></p>
-<p th:if="${#fields.hasErrors('minInv')}" th:errors="*{minInv}">Minimum Inventory Error</p>
-
-<p><input type="text" path="maxInv" th:field="*{maxInv}" placeholder="Maximum Inventory" class="form-control mb-4 col-4"></p>
-<p th:if="${#fields.hasErrors('maxInv')}" th:errors="*{maxInv}">Maximum Inventory Error</p>
-
-
-<p><input type="text" th:field="*{companyName}" placeholder="Company Name" class="form-control mb-4 col-4"/></p>
-
-<p><input type="submit" value="Submit" /></p>
-</form>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+            <input type="submit" class="button" value="Submit" />
+        </form>
+    </div>
+</div>
+<br>
+<a th:href="@{mainscreen}"><button class="btn btn-lg centered-button">Home</button></a>
 </body>
 </html>
