--- a/src/main/resources/templates/confirmationdeletepart.html
+++ b/src/main/resources/templates/confirmationdeletepart.html
@@ -3,13 +3,18 @@
 <head>
     <meta http-equiv="refresh"
           content="0;URL='mainscreen'">
-<!--    <meta charset="UTF-8">-->
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <link type="text/css" href="/css/demo.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Part deleted</title>
 </head>
 <body>
-<h1>Your part has been deleted</h1>
-
-<a href="http://localhost:8080/">Link
-  to Main Screen</a>
+    <div class="container">
+        <h1>Your part has been deleted</h1>
+        <a th:href="@{mainscreen}"><button class="btn btn-lg centered-button">Home</button></a>
+    </div>
 </body>
 </html>
