--- a/src/main/resources/templates/confirmationdeleteproduct.html
+++ b/src/main/resources/templates/confirmationdeleteproduct.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!--    <meta charset="UTF-8">-->
     <meta http-equiv="refresh"
           content="0;URL='mainscreen'">
-    <title>Title</title>
+    <meta charset="UTF-8">
+    <link type="text/css" href="/css/demo.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <title>Product deleted</title>
 </head>
 <body>
-<h1>Your product has been deleted</h1>
-
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<div class="container">
+    <h1>Your product has been deleted</h1>
+    <a th:href="@{mainscreen}"><button class="btn btn-lg centered-button">Home</button></a>
+</div>
 </body>
 </html>
