--- a/src/main/resources/templates/negativeerror.html
+++ b/src/main/resources/templates/negativeerror.html
@@ -2,11 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link type="text/css" href="/css/demo.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Negative Error</title>
 </head>
 <body>
-<p>Cannot delete a part used in a product</p>
-<a href="http://localhost:8080/">Link
-    to Main Screen</a>
+<div class="container">
+    <p>Cannot delete a part used in a product</p>
+    <a th:href="@{mainscreen}"><button class="btn btn-lg centered-button">Home</button></a>
+</div>
 </body>
 </html>
