--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -2,52 +2,64 @@
 <html lang="en">
 <html xmlns:th="https://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link type="text/css" href="/css/demo.css" rel="stylesheet">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Product Form</title>
 </head>
 <body>
-<h1>Product Detail</h1>
-<form action="#" th:action="@{/showFormAddProduct}" th:object="${product}" method="POST"}>
-    <!-- Add hidden form field to handle update -->
-    <p><input type="hidden" th:field="*{id}"/></p>
+<div class="container">
+    <div class="form-container container-md">
+        <h1>Product Detail</h1>
+        <form action="#" th:action="@{/showFormAddProduct}" th:object="${product}" method="POST" class="form-inline">
+            <!-- Add hidden form field to handle update -->
+            <input type="hidden" th:field="*{id}"/>
 
-    <p><input type="text" th:field="*{name}" placeholder="Name" class="form-control mb-4 col-4"/></p>
-
-    <p><input type="text" th:field="*{price}" placeholder= "Price" class="form-control mb-4 col-4"/></p>
-
-
-    <p><input type="text" th:field="*{inv}" placeholder="Inventory" class="form-control mb-4 col-4"/></p>
-
-    <p>
-    <div th:if="${#fields.hasAnyErrors()}">
-    <ul><li th:each="err: ${#fields.allErrors()}" th:text="${err}"></li></ul>
+            <div>
+                <span>Product name: </span>
+                <input type="text" th:field="*{name}" placeholder="Name" class="input-override"/>
+            </div>
+            <div>
+                <span>Price: </span>
+                <input type="text" th:field="*{price}" placeholder= "Price" class="input-override"/>
+            </div>
+            <div>
+                <span>Quantity: </span>
+                <input type="text" th:field="*{inv}" placeholder="Inventory" class="input-override"/>
+            </div>
+            <div th:if="${#fields.hasAnyErrors()}">
+                <ul><li th:each="err: ${#fields.allErrors()}" th:text="${err}"></li></ul>
+            </div>
+            <input type="submit" class="button" value="Submit" />
+        </form>
     </div>
-    </p>
-    <p><input type="submit" value="Submit" /></p>
-</form>
-
-
-<table class="table table-bordered table-striped">
-    <thead class="thead-dark">
-    <h2>Available Parts</h2>
-    <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Inventory</th>
-        <th>Action</th>
-    </tr>
-    </thead>
-    <form>
-    <tr th:each="tempPart : ${availparts}">
-        <td th:text="${tempPart.name}">1</td>
-        <td th:text="${tempPart.price}">1</td>
-        <td th:text="${tempPart.inv}">1</td>
-        <td><a th:href="@{/associatepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Add</a>
-        </td>
-    </tr>
-    </form>
-</table>
+    <br>
+    <table class="table table-bordered table-striped">
+        <thead class="thead-dark">
+        <h2>Available Parts</h2>
+        <tr>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Inventory</th>
+            <th>Action</th>
+        </tr>
+        </thead>
+        <form>
+            <tr th:each="tempPart : ${availparts}">
+                <td th:text="${tempPart.name}">1</td>
+                <td th:text="${tempPart.price}">1</td>
+                <td th:text="${tempPart.inv}">1</td>
+                <td><a th:href="@{/associatepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Add</a>
+                </td>
+            </tr>
+        </form>
+    </table>
     <table class="table table-bordered table-striped">
         <h2>Associated Parts</h2>
         <thead class="thead-dark">
@@ -68,8 +80,8 @@
         </tr>
         </tbody>
     </table>
-
-<!--<footer><a href="http://localhost:8080/">Link-->
-<!--    to Main Screen</a></footer>-->
+</div>
+<br>
+<a th:href="@{mainscreen}"><button class="btn btn-lg centered-button">Home</button></a>
 </body>
 </html>
